AssocRules cleanup: - Remove unused function   static bool allowAssociation(Uml::AssociationType, const std::type_info &) - At function static bool allowAssociation(Uml::AssociationType,                                            UMLWidget *, UMLWidget *, bool)   remove the last argument (extendedCheck), and put "#if 0" at the code   for extendedCheck due to crashes. - At struct Assoc_Rule, rename member `directional' to `bidirectional'.   Add test for `bidirectional' in the allowAssociation functions. - At definition of m_AssocRules[],   - remove lines which are redundant due to `bidirectional' being true.   - at lines for AssociationType::Containment, set `bidirectional' to     false.

BUG: 271243

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1280794